# RAG-tutorial

./: .env  .gitignore  README.md  pyproject.toml  tutorial.ipynb
gradio_app/: README.md  app.py  requirements.txt
