[project]
name = "rag-tutorial"
version = "0.1.0"
requires-python = ">=3.12" 
description = "A RAG tutorial using Groq, LangChain, and Gradio"
dependencies = [
    "pandas",
    "langchain-groq",
    "langchain-huggingface",
    "langchain-chroma",
    "gradio",
    "python-dotenv",
    "ipykernel",
    "sentence-transformers",
    "datasets",
    "scikit-learn",
    "matplotlib",
    "plotly",
    ]
    

[tool.uv]
dev-dependencies = [
    "jupyter",
]
